# PRISM

./: .gitignore  AGENTS.md  LICENSE  README.md  claude.md  pyproject.toml  spec.md
docs/: beta_task_list.md  code_audit_checklist.md  overview.md  prompt_alignment.md  realignment.md
src/prism/: __init__.py  api.py  model.py  utils.py
src/prism/backends/: __init__.py  base.py  mlx.py  torch.py
src/prism/core/: __init__.py  label_probs.py  prompt_cache.py  token_trie.py
src/prism/prompts/: __init__.py  templates.py
src/prism/scheduling/: __init__.py
src/prism/tasks/: __init__.py  classify.py  label.py  rate.py  shared.py
tests/: bench_cache_reuse.py  bench_compile.py  blessed_models.toml  test_api_e2e.py  test_api_e2e_torch.py  test_phase_a_correctness.py  test_phase_a_correctness_old.py  test_prompt_templates_old.py  test_token_trie.py  test_tokenization_boundaries_mlx.py
